core/roboconf-core/src/test/resources/configurations/valid/component-external-imports.graph
A {
	installer: bash;
	exports: port, ip;
	imports: A.port (optional), A.ip (optional), external App.toto, exTernal App2.ip (optional);
}