core/roboconf-core/src/test/resources/configurations/invalid/unresolved-extended-facet.graph
A {
	facets: F1, F2;
}

facet F1 {
	exports: ip;
}
